Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "k_means = KMeans(n_clusters=6) # Must set number of clusters at initialization time!\n",
+    "k_means.fit(X) # Run the clustering algorithm\n",
+    "cluster_assignments = k_means.predict(X) # Generate cluster index values for each row in df\n",
+    "# cluster predictions for each point are also stored in k_means.labels_ attribute\n",
     "\n",
+    "\n",
+    "y_hat = k_means.predict(X)\n",
     "\n",
     "k_means_6 = None\n",
     "# Don't forget to fit this model, too!\n",
