Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,14 +705,8 @@
     "# cluster predictions for each point are also stored in k_means.labels_ attribute\n",
     "\n",
     "\n",
-    "y_hat = k_means.predict(X)\n",
-    "\n",
-    "k_means_6 = None\n",
-    "# Don't forget to fit this model, too!\n",
-    "\n",
-    "yhat_6 = None\n",
-    "\n",
-    "# Import and modify the visualization code below this line!"
+    "yhat_6 = k_means.predict(X)\n",
+    "\n"
    ]
   },
   {
