--- a/index.ipynb
+++ b/index.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_6 = None\n",
+    "labels_6 = k_means\n",
     "\n",
     "# Generate a silhouette score for this model below this line!"
    ]
