Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -718,11 +718,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_6 = k_means\n",
+    "labels_6 = k_means.labels_\n",
     "\n",
     "# Generate a silhouette score for this model below this line!"
    ]
