Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -723,7 +723,8 @@
    "outputs": [],
    "source": [
     "labels_6 = k_means.labels_\n",
-    "\n",
+    "labels = k_means.labels_\n",
+    "metrics.silhouette_score(X, labels, metric=\"euclidean\")\n",
     "# Generate a silhouette score for this model below this line!"
    ]
   },
