--- a/index.ipynb
+++ b/index.ipynb
@@ -718,13 +718,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7200670843153729"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "labels_6 = k_means.labels_\n",
-    "labels = k_means.labels_\n",
-    "metrics.silhouette_score(X, labels, metric=\"euclidean\")\n",
+    "metrics.silhouette_score(X, labels_6, metric=\"euclidean\")\n",
     "# Generate a silhouette score for this model below this line!"
    ]
   },
